# libworkflow

./: .gitignore  CMakeLists.txt  README.md  libworkflow.cpp
actions/communication/: execute_workflow.cpp  execute_workflow.h
actions/tools/: fetch_refs.cpp  fetch_refs.h
contexts/: refs_storage_ctx.cpp  refs_storage_ctx.h
core/: action.cpp  action.h  action_meta.h  action_wrappers.cpp  action_wrappers.h  bindings.cpp  bindings.h  context.cpp  context.h  controller.cpp  controller.h  controller_spawn.h  property_set.h  put_definition.cpp  put_definition.h  request.cpp  request.h  result.cpp  result.h  session.cpp  session.h  state_machine.cpp  state_machine.h  steps.h  target.cpp  target.h  workflow.cpp  workflow.h
service/: actor.cpp  actor.h  client.cpp  client.h  client_manager.cpp  client_manager.h  controller_manager.cpp  controller_manager.h  http_client.cpp  http_client.h  http_input.cpp  http_input.h  input.cpp  input.h  server.cpp  server.h  tcp_client.cpp  tcp_client.h  tcp_input.cpp  tcp_input.h
tests/: CMakeLists.txt  basic-test.cpp  basic_test.cpp  perform_test  test_02.cpp  test_03.cpp  test_05.cpp  test_06.cpp  test_07.cpp  test_1.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_13.cpp  test_14.cpp  test_15.cpp  test_16.cpp  test_17.cpp  test_18.cpp  test_19.cpp  test_2.cpp  test_20.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_9.cpp
tests/common/: CMakeLists.txt  test_client.cpp  test_client.h
tests/common/actions/: do_next.cpp  do_next.h  error.cpp  error.h  print_log.cpp  print_log.h  some_actions.cpp  some_actions.h
tests/common/contexts/: some_context.cpp  some_context.h
tests/common/jsons/: request_2.json  request_7.json  test_2.json
tools/: action_factory.cpp  action_factory.h  active_object.cpp  active_object.h  context_factory.cpp  context_factory.h  defines.cpp  defines.h  error_report.cpp  error_report.h  jsonable.cpp  jsonable.h  logged.cpp  logged.h  property.cpp  property.h  property_set.cpp  property_set.h  timed.cpp  timed.h  type_checker.h
